[package]
name = "alloca"
version = "0.3.2"
authors = ["Adel Prokurov <adel.prokurov@gmail.com>"]
edition = "2018"
description = "Mostly safe wrapper for alloca"
repository = "https://github.com/playXE/alloca-rs"
readme = "README.md"
keywords = ["alloca", "wrapper", "stack", "stack-allocation"]
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.release]
lto = "fat"

[features]
stack-clash-protection = []

[build-dependencies]
cc = "1.0"
